--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@g-loot/react-tournament-brackets": "^1.0.31-rc",
     "@heroicons/react": "^2.1.3",
     "firebase": "^10.11.0",
     "react": "^18.2.0",
