--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@g-loot/react-tournament-brackets": "^1.0.31-rc",
     "@heroicons/react": "^2.1.3",
     "firebase": "^10.11.0",
+    "konva": "^9.3.14",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.10",
     "react-router-dom": "^6.22.3",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
